Added styles to error messages.

--- a/app/assets/stylesheets/flashcards.scss
+++ b/app/assets/stylesheets/flashcards.scss
@@ -101,7 +101,7 @@
 		a{
 			float: right; 
 			&:link, &:visited{
-				color: #707070 !important; 
+				color: #7f7f7f !important; 
 			}
 
 			&:hover{
