--- a/app/views/flashcards/new_batch.html.erb
+++ b/app/views/flashcards/new_batch.html.erb
@@ -1,18 +1,18 @@
 <h1>Generate New Batch of Flashcards</h1>
 
 <div class="generate-new-batch-form">
-  <% if @errors.any? %>
-      <div id="error_explanation">
-        <h2>
-          <%= pluralize(@errors.count, "error") %> prohibited
-          this article from being saved:
-        </h2>
+  <% if flash[:error] && flash[:error].any? %>
+      <div>
         <ul>
-          <% @errors.each do |msg| %>
-            <li><%= msg %></li>
+          <% flash[:error].each do |msg| %>
+            <li class="alert alert-danger alert-dismissible" role="alert">
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <%= msg %>  
+            </li>
           <% end %>
         </ul>
       </div>
+      <% flash[:error] = nil %>
   <% end %>
 
 
