--- a/app/assets/stylesheets/home.scss.erb
+++ b/app/assets/stylesheets/home.scss.erb
@@ -228,3 +228,45 @@ the auth buttons stagger */
     padding-right: 5px;
   }
 }
+
+.notice {
+    padding: 15px !important;
+    background-color: #fafafa !important;
+    border-left: 6px solid #7f7f84 !important;
+    margin-bottom: 10px !important;
+    -webkit-box-shadow: 0 5px 8px -6px rgba(0,0,0,.2) !important;
+       -moz-box-shadow: 0 5px 8px -6px rgba(0,0,0,.2) !important;
+            box-shadow: 0 5px 8px -6px rgba(0,0,0,.2) !important;
+}
+.notice-sm {
+    padding: 10px !important;
+    font-size: 80% !important;
+}
+.notice-lg {
+    padding: 35px !important;
+    font-size: large !important;
+}
+.notice-success {
+    border-color: #80D651 !important;
+}
+.notice-success>strong {
+    color: #80D651 !important;
+}
+.notice-info {
+    border-color: #45ABCD !important;
+}
+.notice-info>strong {
+    color: #45ABCD !important;
+}
+.notice-warning {
+    border-color: #FEAF20 !important;
+}
+.notice-warning>strong {
+    color: #FEAF20 !important;
+}
+.notice-danger {
+    border-color: #d73814 !important;
+}
+.notice-danger>strong {
+    color: #d73814 !important;
+}
