--- a/app/assets/stylesheets/stacks.scss
+++ b/app/assets/stylesheets/stacks.scss
@@ -76,3 +76,10 @@ $single_stack_width: 30%;
 input[type='checkbox']{
 	margin-right: 10px !important; 
 }
+
+.filter-and-generate-stacks{
+
+	input[type='text']{
+		width: 100% !important; 
+	}
+}
