--- a/app/views/stacks/index.html.erb
+++ b/app/views/stacks/index.html.erb
@@ -1,20 +1,24 @@
-<h1>Find and Generate Stacks</h1>
+<h1>Find Stacks</h1>
 <!-- TODO: Instead of tab-like interface, start off by listing all the stacks ordered 
 alpahbetially by name and give the user the option of filtering stacks by type or name. -->
-<div>
+<div class="stacks-list">
 	<div class="container">
-	<form class="filter-and-generate-stacks" role="search">
+		<form class="filter-and-generate-stacks" role="search">
+		<%= form_tag("/stacks/find", method: "post") do %>
 		<div class="row">
-			<div class="col-xs-6">
+			<div class="col-xs-4">
 			</div>
 			<div class="col-xs-2">
-				<p><input type="checkbox" name="by_tags" />Tags</p>
+				<label class="filter-label">Filter: </label>
+			</div>
+			<div class="col-xs-2">
+				<label><input type="checkbox" name="by_tags" />Tags</label>
 			</div>
 			<div class='col-xs-2'>
-				<p><input type="checkbox" name="by_langs" />Language Pair</p>
+				<label><input type="checkbox" name="by_langs" />Languages</label>
 			</div>
 			<div class="col-xs-2">
-				<p><input type="checkbox" name="by_tags" />Creation Batch</p>
+				<label><input type="checkbox" name="by_tags" />Creation Batch</label>
 			</div>
 		</div>
 		<div class="row">
@@ -26,7 +30,19 @@ alpahbetially by name and give the user the option of filtering stacks by type o
 					</div>
 				</div>
 				</form>
+				<% end %>
 			</div>
 		</div>
+
+		<table>
+			<tr>
+				<th>Name</th>
+				<th>Number of Flashcards</th>
+				<th>Delete</th>
+			</tr>
+
+		    <%= render partial: "stack_list", locals: { stacks: @stacks, paths: @paths }%> 
+
+		</table>
 	</div>
 </div>
