--- a/app/views/stacks/_stack_list.html.erb
+++ b/app/views/stacks/_stack_list.html.erb
@@ -3,6 +3,9 @@
 				<tr>
 					<td><%= stack.name %></td>
 					<td><%= stack.flashcards.size %></td>
+					<td>View</td>
+					<td>Study</td>
+					<td>Print</td>
 					<td>
 						<a data-confirm="Are you sure?" rel="nofollow" data-remote="true" data-method="delete" href="<%= paths[i] %>" class="delete-link" data-toggle="right" data-placement="bottom" title="Delete <%= stack.name %> stack">
  						<span class="glyphicon glyphicon-remove-circle delete-link" aria-hidden="true"></a>
