--- a/app/views/stacks/index.html.erb
+++ b/app/views/stacks/index.html.erb
@@ -38,6 +38,9 @@ alpahbetially by name and give the user the option of filtering stacks by type o
 			<tr>
 				<th>Name</th>
 				<th>Number of Flashcards</th>
+				<th>View</th>
+				<th>Study</th>
+				<th>Print</th>
 				<th>Delete</th>
 			</tr>
 
