--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,600i,700|News+Cycle:400,700&amp;subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,600i,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
 
@@ -51,9 +51,7 @@
 	              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stacks<span class="caret"></span></a>
 	              <ul class="dropdown-menu">
 	                <li><a href="/flashcards/new_batch">Generate</a></li>
-	                <li><a href="/stacks">View All</a></li>
-	                <li><a href="#">Study Stack</a></li>
-                  <li><a href="#">Print Stack</a></li>
+	                <li><a href="/stacks">Find</a></li>
 	              </ul>
 	            </li>
               <li><a href="">Help</a></li>
