--- a/app/views/stacks/_stack_list.html.erb
+++ b/app/views/stacks/_stack_list.html.erb
@@ -3,9 +3,10 @@
 				<tr>
 					<td><%= stack.name %></td>
 					<td><%= stack.flashcards.size %></td>
-					<td>View</td>
-					<td>Study</td>
-					<td>Print</td>
+					<td><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></td>
+					<td><span class="glyphicon glyphicon-education" aria-hidden="true"></span></td>
+					<td><span class="glyphicon glyphicon-print" aria-hidden="true"></span></td>
+					<td>No</td>
 					<td>
 						<a data-confirm="Are you sure?" rel="nofollow" data-remote="true" data-method="delete" href="<%= paths[i] %>" class="delete-link" data-toggle="right" data-placement="bottom" title="Delete <%= stack.name %> stack">
  						<span class="glyphicon glyphicon-remove-circle delete-link" aria-hidden="true"></a>
