--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
 	            <li class="dropdown">
 	              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Flashcards<span class="caret"></span></a>
 	              <ul class="dropdown-menu">
-	                <li><a href="/flashcards/new_batch">Create</a></li>
+	                <li><a href="/flashcards/new_batch">Generate</a></li>
 	                <li><a href="/flashcards">View All</a></li>
 	              </ul>
 	            </li>
@@ -51,7 +51,7 @@
 	              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stacks<span class="caret"></span></a>
 	              <ul class="dropdown-menu">
 	                <li><a href="/flashcards/new_batch">Generate</a></li>
-	                <li><a href="/stacks">Find</a></li>
+	                <li><a href="/stacks">View All</a></li>
 	              </ul>
 	            </li>
               <li><a href="">Help</a></li>
