--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,24 +1,50 @@
 <h1>All Tags</h1>
-	<% if flash[:notice] %> 
-    	<div class="notice"><%= flash[:notice] %></div>
-    	<% flash[:notice] = nil %>
-	<% end %>
-<table>
-	<tr>
-		<th>Name</th>
-		<th>Number of Flashcards</th>
-		<th>Editable?</th>
-		<th>Deletable?</th>
-		<th>View Flashcards (stack)?</th>
-	</tr>
-	<!-- TODO : Add edit and delete links where needed -->
-	<% @tags.each do |tag| %>
-		<tr>	
-			<td><%= tag.name %></td>
-			<td><%= tag.flashcards.size %></td>
-			<td><%= if tag.category == 1 then "Yes" else "No" end %></td>
-			<td><%= if tag.category == 1 then "Yes" else "No" end %></td>
-			<td><%= link_to 'Flashcards (stack)', tag.stack_path %></td>
+
+<div class="container">
+		<% if flash[:notice] %> 
+	    	<div class="notice"><%= flash[:notice] %></div>
+	    	<% flash[:notice] = nil %>
+		<% end %>
+		<p>To search for multiple terms, enter them as a comma separated list. To just apply a filter, check the box next to the filter you want to apply and leave the search box empty.</p>
+			<%= form_tag("/tags", method: "post", :class => "filter-and-generate", :remote => true) do %>
+			<div class="row">
+				<div class="col-xs-6">
+				</div>
+				<div class="col-xs-2">
+					<label class="filter-label">Filter: </label>
+				</div>
+				<div class="col-xs-2">
+					<label><input type="checkbox" name="filter_rules[]" value="user_defined_only" />Only User Defined Tags?</label>
+				</div>
+				<div class="col-xs-2">
+					<label><input type="checkbox" name="filter_rules[]" value="remove_empty" /> Remove empty?</label>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12">
+			    	<div class="input-group">
+						<input type="text" class="form-control" placeholder="Search" name="srch_term" id="srch_term">
+						<div class="input-group-btn">
+							<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+						</div>
+					</div>
+					<% end %>
+				</div>
+			</div>
+
+	<%= form_tag("/tags/delete_all", method: "post", :remote => true) do %>
+	<button class="btn btn-default side-button" type="submit">Delete all deletable tags without any flashcards</button>
+	<table>
+		<tr>
+			<th>Name<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span><span class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span></th>
+			<th>Number of Flashcards<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span><span class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span></th>
+			<th>Editable?</th>
+			<th>Deletable?</th>
+			<th>View Flashcards (stack)?</th>
 		</tr>
+		<!-- TODO : Add edit and delete links where needed -->
+		    <%= render partial: "tags_list", locals: { tags: @tags, study_paths: @study_paths }%> 
+
+	</table>
 	<% end %>
-</table>
+</div>
