--- a/app/views/flashcards/show.html.erb
+++ b/app/views/flashcards/show.html.erb
@@ -1,3 +1,3 @@
 <h1>View Flashcard</h1>
-<%= render partial: "single_flashcard", locals: { f: @flashcard, l: @langs, show_view_link: false, col_class: "single_card center-horizontally" }%> 
+<%= render partial: "single_flashcard", locals: { f: @flashcard, l: @langs, show_view_link: false, col_class: "single_card center-horizontally", should_show: '', count: 0 }%> 
 
