--- a/app/views/flashcards/_single_flashcard.html.erb
+++ b/app/views/flashcards/_single_flashcard.html.erb
@@ -1,4 +1,4 @@
-<div class="<%= col_class + ' ' + should_show %>" id="<%= 'card_' + f.id.to_s + '_top'%>">
+<div class="<%= col_class + 'slide_' + count.to_s  + should_show %>" id="<%= 'card_' + f.id.to_s + '_top'%>">
 	
 	<!--================FLASHCARD CODE===========================================-->
 	<div class="flashcard-container">
