--- a/app/views/stacks/study.html.erb
+++ b/app/views/stacks/study.html.erb
@@ -1,5 +1,8 @@
 <h1><%= @stack_title %></h2>
+
 <div class="study-stack-container container">
+	
+	<div class="container">
 		<div class="left-control">
 			<span class="glyphicon glyphicon-triangle-left" aria-hidden="true"></span>
 		</div>
@@ -11,5 +14,6 @@
 		<div class="right-control">
 			<span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>
 		</div>
+	</div>
 </div>
 
